3.1.2
	Fix timespamp on sparc64 (Gert Doering)
	Add the ability to query extrnal sources in ACL using URL 
3.1.1
	Fix crashes during dump reloads (AIDA Shinra)
	Fix DoS in MX sync protocol (AIDA Shinra)
	Check for -lc_r before others, for FreeBSD (AIDA Shinra)
	Fix configure for libspf2 (AIDA Shinra)
	Fix FreeBSD build (AIDA Shinra)
	Avoid buffer overflow in DNSRBL code (AIDA Shinra)
	Fix build problem with newer BerkeleyDB (AIDA Shinra)
	Check if -lbind requires -lpthread, for Linux
	Correctly enable non blocking I/O fox MX sync (Attila Bruncsak)
	Pointer to DRAC documentation (Matthias Scheler)
	FreeBSD build fixes (Hajimu UMEMOTO)
	Remove the /tmp/access-list.debug for security sake (AIDA Shinra)
	Fix display bug in log messages (AIDA Shinra)
	Updated the list of broken MTA
	Fix MX sync between Tru64 and Linux (Attila Bruncsak)
	Silly build fix for platforms that lack vsyslog()
	Honour LINE_MAX for syslog (Attila Bruncsak)
	Warn about ignored ACL lines after acl default rule
	Fix various race conditions (AIDA Shinra)
	Fix big bugs in macro support (AIDA Shinra)
	Fix build warning on Tru64
	Build fix on Solaris
	Documentation fix
3.0a5
	Build fix on Tru64, fix MX sync (Attila Bruncsak)
	Fix various race conditions (AIDA Shinra)
3.0a4
	IPv6 and build fixes (Hajimu UMEMOTO)
3.0a3
	Fix --disable-drac and --disable-dnsrbl (Fabien Tassin)
	Add support to use Sendmail macros in the ACL
	Remove the need of LOG_PERROR, make sure no log is missed
	Make sure -c tells what happens and return an usable exit code
3.0a2
	Documentation fix about required sendmail macros
	Missing bit in rc-redhat.sh (Jobst Schmalenbach)
	Fix bugs that prevented IPv6 addresses resolution
	Add more log output for blackist and flushaddr (Fabien Tassin)
	Allow rejecting by tempfail on blacklist configuration (Fabien Tassin)
3.0a1
	Build fix
2.1.12
	IPv6 fixes again (Hajimu UMEMOTO)
	Build fix on FreeBSD
	per-ACL SMTP error code and messages
2.1.11
	IPv6 fixes (Hajimu UMEMOTO)