@@ -2,7 +2,7 @@
 /* config.h.in.  Generated from configure.ac by autoheader.  */
 
 /* Build environnement */
-#define BUILD_ENV "manu@plan:/wd1a/home/manu/milter-greylist-311 Wed Dec  6 15:58:38 CET 2006"
+#define BUILD_ENV "manu@plan:/wd1a/home/manu/milter-greylist-311 Thu Dec  7 11:01:58 CET 2006"
 
 /* Define to 1 if you have the <arpa/inet.h> header file. */
 #define HAVE_ARPA_INET_H 1
