@@ -1,5 +1,5 @@
 .\"
-.\" $Id: greylist.conf.5,v 1.45 2006/12/06 15:02:41 manu Exp $
+.\" $Id: greylist.conf.5,v 1.46 2006/12/07 10:22:00 manu Exp $
 .\"
 .\" Copyright (c) 2004 Emmanuel Dreyfus
 .\" All rights reserved.
@@ -436,13 +436,16 @@ is able to query external sources of information
 through various URL, if it was built with --with-libcurl. Here is an 
 example:
 .IP
-  urlcheck "glusr" "http://www.example.net/mgl-config?rcpt=%r"
+  urlcheck "glusr" "http://www.example.net/mgl-config?rcpt=%r" 5
 
   acl greylist urlcheck "glusr" delay 15m 
   acl whitelist default
 .PP
-For each message, the URL will be querried, with  % format tags
-being subtituted by the following parameters:
+The trailing 5 at the end of the
+.I urlcheck
+definition is the maximum number of simultaneous connexions we want to 
+launch on this URL. For each message, the URL will be querried, with  % format 
+tags being subtituted by the following parameters:
 .TP
 .I %r 
 the message recipient e-mail address
